Issue-4 - Refactoring of existing code

--- a/src/main/resources/io/jenkins/plugins/artifactrepo/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/artifactrepo/Messages.properties
@@ -1,10 +1,10 @@
 # Log messages
-log.blankUrl=URL is blank, skip request
+log.blankUrl=The url must not be blank
 log.disabledProxy=Both local and global HTTP proxy are disabled
-log.errorCertsProcessing=Invalid SSL certs may or may bot be ignored
+log.errorCertsProcessing=Cannot create SSL context, invalid SSL certs may not be ignored
 log.invalidCreds=Could not identify a credentials item with the given id: {0}
 log.missingCreds=No credentials ID provided, skip credentials lookup
-log.failedRequest=The HTTP request has failed. RC = {0} 
+log.missingItem=The item param must not be null
 log.invalidConnector=Invalid connector type provided
 log.invalidParameter=Invalid param type found: {0}
 log.invalidServer=Invalid server type found: {0}
@@ -12,6 +12,8 @@ log.invalidUrl=Cannot transform provided URL to an HttpHost object: {0}
 log.noName=Name pattern is null, skip retrieval of artifacts
 log.noRegex=No matcher regex provided, skip parsing
 log.parseResponse=An error occured while parsing the response payload
+log.requestException=An exception occurred while requesting data from remote server
+log.requestFailed=The HTTP request has failed. RC = {0}
 # Form validation
 formError.failedConnection=Connection failed
 formError.invalidArtifactName=An asterisk * is not allowed as artifact name in Artifactory
